Vehicle inventory overlap when overflow fix

--- a/css/screen.css
+++ b/css/screen.css
@@ -82,7 +82,7 @@ div#clockcanvas_div {background: transparent url(../images/clock/clock.png) no-r
 
 .vehicle_gear{
 	position: absolute;
-	margin-top: 75px;
+	margin-top: 55px;
 	margin-left: 520px;
 	width: 375px;
 	height: 566px;
@@ -93,13 +93,13 @@ div#clockcanvas_div {background: transparent url(../images/clock/clock.png) no-r
 	margin-top: 48px;
 	margin-left: 0px;
 	width: 374px;
-	height: 500px;
+	height: 230px;
 	overflow: auto;
 	
 }
 .vehicle_hitpoints{
 	position: absolute;
-	margin-top: 375px;
+	margin-top: 325px;
 	margin-left: 520px;
 	width: 375px;
 	height: 566px;
